src/css/style.css
/* vars */
:root {
  --my-grey: rgba(52, 58, 64, 0.95);
  --near-black: rgb(52, 58, 64);
  --near-white: rgb(248,249,250);
}

/* Smooth scrolling */
html {
	scroll-behavior: smooth;
}


/* -------------- */
/* Navbar section */
/* -------------- */
.nav-item a {
  border-bottom: 2px solid transparent;
  border-top: 2px solid transparent;
  margin-inline: 5px;
}

.nav-item a:hover {
  color: white !important;
}

@media screen and (min-width: 576px) {
  .nav-item a:hover, .nav-item a.active {
    border-bottom: 2px solid white;
  }
}
/* End of navbar section */

/* ------------- */
/* Hero/About section */
/* ------------- */
.jumbotron {
  background: linear-gradient(rgba(52, 58, 64, 1), rgba(52, 58, 64, 0.9)), url(../images/laptop.jpg);
  background-size: cover;
  background-position: 50% 50%;
  color:white !important;
  min-height: 96vh;
  max-height: 100%;
  /* background-color: rgb(52, 58, 64); */
}

.jumbotron a.text-warning:hover {
  color: rgb(255, 193, 7) !important;
}
/* End of Hero/About section */


/* --------------- */
/* Project section */
/* --------------- */
#projects .card-body {
  background-color: rgb(243, 243, 243);
}

#projects .card {
  transition: all 0.4s ease-in-out;
  margin: 10px 0;
  cursor: pointer;
}

#projects .img-wrapper {
  position: relative;
  background-color:gray;
}

#projects .card img { 
  object-fit: cover;
  object-position: 50% 50%;
  height: 280px; 
  transition: opacity 0.4s ease-in-out;
}

#projects .card img[data-type="screenshot"] { 
  object-position: center top;
}

#projects .card .buttons, #projects .card i {
  position: absolute;
  display: none;
  z-index: 99;
  transition: all 0.4s ease-in-out;
}

#projects .card .buttons {
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  min-width: 130px;
}

#projects .card a { 
  background-color: rgba(0,0,0,0.2);
  display: block;
}

#projects .card a:hover {
  background-color: rgba(255,255,255,0.8);
  color: darkslategrey;
}

#projects .card:hover {
  transform: translateY(-2px);
  box-shadow: 0px 5px 10px 0px grey;
  transition: all 0.4s ease-in-out;
}

#projects .card:hover img {
  transition: opacity 0.4s ease-in-out;
  opacity: 0.3;
}

#projects .card:hover div {
  display: block;
  transition: all 0.4s ease-in-out;
}

#projects .card:hover i {
  display: block;
  transition: all 0.4s ease-in-out;
}

/* Image toggle */
.toggle {
  display: flex;
  gap: 0.5rem;
  align-items: center;
  transition: opacity 200ms linear;
  opacity: 0.6;
}

.toggle:hover {
  opacity: 1;
}

.toggle label {
  font-size: 1.2rem;
  color: black;
  cursor: pointer;
  transform: translateY(3px);
}

.toggle input {
  display: none;
}

.toggle-btn {
  padding: 0.3rem;
  border: 1.5px solid black;
  border-radius: 100vmax;
  outline: none;
  background-color: transparent;
  width: 3.5rem;
  height: 1.8rem;
  cursor: pointer;
}

.toggle-btn::after {
  content: "";
  display: block;
  height: 1rem;
  width: 1rem;
  background-color: black;
  border-radius: 50%;
  margin-left: 1.75rem;
  transition: margin 200ms linear;
}

.toggle-on:checked ~ .toggle-btn::after {
  margin-left: 0;
}

#image-toggle {
  scale: 0.7;
  width: 270px;
  margin-right: auto;
  margin-left: -20px;
  margin-bottom: -5px;
}

/* End of Project section */


/* ----------------------- */
/* Contact buttons section */
/* ----------------------- */
.contact-button {
  display: inline-block;
  margin-top: 10px;
  width: 75px;
  text-align: center;
  font-size: 20px;
}

@media screen and (max-width: 600px) {
  .contact-button {
    margin: 10px -8px 0px -8px;
  }
}

@media screen and (max-width: 340px) {
  .contact-button {
    margin: 10px -12px 0px -12px;
  }
}

.contact-button i {
  position: relative;
  padding: 11px 0;
  background-color: var(--my-grey);
  border: 1px solid var(--my-grey);
  color: white;
  border-radius: 30px;
  width: 45px;
  transition: all 0.3s ease-in-out;
}

.contact-button i:hover {
  border: 1px solid #5387ff;
  background-color: #5387ff;
  transform: translateY(-2px);
  /* Horizontal Length | Vertical Length  | Blur Radius | Spread Radius | Shaddow colour */
  box-shadow: 0px 5px 10px 0px grey;   
  transition: all 0.3s ease-in-out;
}

.contact-button i:hover::after {
  content: attr(text) !important;
  display: block;
  position: absolute;
  top: -20px;
  left: 50%;
  transform: translateX(-50%);
  padding: 0;
  margin: 0;
  text-align: center;
  font-size: 12px;
  color: black;
}
/* End of Contact buttons section */


/* -------------- */
/* Skills section */
/* -------------- */
.zero {
  width: 0 !important;
}

.stack-icon {
  cursor: pointer;
  width: 80px;
}

.stack-icon img {
  filter: grayscale(100%);
  height: 50px;
  display: block;
  margin: 0 auto;
}

.stack-icon:hover img {
  filter: none !important;
}
/* End of Skills sections */

